changed caom2-tap to take tap serviceID and do lookups itself made caom2-datalink-server configurable (tap and soda serviceID) and stripped out cruft from old CADC cutout service